methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:1: error: Missing closing brace `}' assumed here
def growFlowers() {setCouleurBrosse(Color.RED)
^FlowerPot:1: error: expected class or object definition
def growFlowers() {setCouleurBrosse(Color.RED)
^